[#141] fix jdk8 compatibility